# job-radar

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  README.zh-CN.md  ROADMAP.md  SKILL.md  install.sh  pyproject.toml
.github/workflows/: ci.yml
docs/: 00-design.md  01-sources.md  02-matching.md  03-channels.md  04-architecture.md  05-ops.md  06-quality.md  08-linkedin-setup.md  10-remote-job-sources.md  GET-STARTED.md
docs/decisions/: 0001-why-python-litellm.md  0002-why-sqlite.md  0003-why-email-first.md  README.md
job_radar/: __init__.py  cli.py  config.py  db.py  http.py  llm.py  logging_.py  models.py  profile_mutator.py  text.py  trace.py
job_radar/channels/: __init__.py  digest.py  email_resend.py  email_smtp.py  router.py
job_radar/eval/: __init__.py  labeler.py  metrics.py
job_radar/pipeline/: __init__.py  dedupe.py  hard_filter.py  heuristic_scorer.py  llm_scorer.py  normalize.py  orchestrator.py
job_radar/sources/: __init__.py  ashby.py  careers_jsonld.py  cryptojobslist.py  decentrajobs.py  dejob.py  gmail_api.py  greenhouse.py  hn_hiring.py  jobicy.py  lever.py  linkedin_email.py  registry.py  remoteok.py  remotive.py  web3_career.py  weworkremotely.py  workable.py
profile/: README.md  example.yaml
scripts/: explain.py  gmail_auth.py  peek_feed.py  preview_digest.py  probe_ats.py  probe_bigger.py  probe_many.py  probe_model.py  query.py  show_top.py  smoke_llm.py  smoke_llm_scorer.py
tests/: conftest.py  test_dedupe.py  test_hard_filter.py  test_lever_parser.py  test_scorer.py  test_text.py
(+5 files in other folders)
